Fix: Tweak menu pos on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,7 +208,7 @@ a[href="https://kwagabriel.github.io/"] {
 #dragged.dragged-gamedoc-version {
     text-align: center;
     width: 29%;
-    transform: scale(70%, 70%) translate(-125%, 20%);
+    transform: scale(70%, 70%) translate(-122%, 10%);
     padding-bottom: 20px;
     font-size: 1em;
     border-radius: 15px 50px 15px 15px;
@@ -242,7 +242,7 @@ a[href="https://kwagabriel.github.io/"] {
     }
 
     #dragged.dragged-gamedoc-version {
-        transform: scale(100%, 100%) translate(-50%, 215%);
+        transform: scale(100%, 100%) translate(-47%, 218%);
         font-size: 0.9em;
         transition: color .25s ease, background-color .25s ease, box-shadow .25s ease;
     }
